[package]
name = "opnrtx-companion"
authors = ["OpenRTX Developers"]
description = "GUI application to install and manage OpenRTX on ham radios"
version = "0.0.1"
edition = "2021"
build = "build.rs"
license = "GPLv3"
repository = "https://github.com/OpenRTX/OpenRTX-Companion"

[profile.release]
opt-level = "z"  # Optimize for size.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["ico"]

[dependencies]
iced = {version = "0.10", features = ["smol"]}
iced_aw = { version = "0.6.0", default-features = false, features = ["split"] }
time = { version = "0.3.5", features = ["local-offset"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.17"
#rusb = "0.9"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["shellapi", "winuser"] }
# winsafe = { version = "0.0.14", features = ["shell", "user"] }

[package.metadata.winres]
OriginalFilename = "ICED_EXAMPLE.EXE"
FileDescription = "A OpenRTX Tool to for radio stuff. https://github.com/xxx- GPLv2"
Comments = "This software is licensed under GPLv2. You can obtain the source code here: https://github.com/xxx"