[package]
name = "openrtx-companion"
authors = ["OpenRTX Developers"]
description = "GUI application to install and manage OpenRTX on ham radios"
version = "0.0.1"
edition = "2021"
build = "build.rs"
license = "GPLv3"
repository = "https://github.com/OpenRTX/OpenRTX-Companion"

[profile.release]
opt-level = "z" # Optimize for size.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
# winresource = "0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["ico"]

[dependencies]
iced_aw = { version = "0.9.2", default-features = false, features = [
    "split",
    "tabs",
    "icons",
] }
iced = { version = "0.12.1", default-features = false, features = [
    "advanced",
    "async-std",
    "smol",
    "image",
] }
rfd = "0.11.4"
time = { version = "0.3.5", features = ["local-offset"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.17"
#rusb = "0.9"
serial_enumerator = "0"

# library which currently wraps the radio_tool cxx tool
rtxflash = { git = "https://github.com/OpenRTX/rtxflash", branch = "main" }

# library to manage the OpenRTX Communication Protocol (rtxlink)
rtxlink = { git = "https://github.com/OpenRTX/rtxlink", branch = "main" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["shellapi", "winuser"] }
# winsafe = { version = "0.0.14", features = ["shell", "user"] }

[package.metadata.winres]
OriginalFilename = "opnrtx-companion.exe"
FileDescription = "An OpenRTX Companion for radio modification. https://github.com/OpenRTX/OpenRTX-Companion - GPLv3"
Comments = "This software is licensed under GPLv3. You can obtain the source code here: https://github.com/OpenRTX/OpenRTX-Companion"
LegalCopyright = "Copyright © 2023 - OpenRTX Project"
